# EzCuda

./: CMakeLists.txt
include/ez-cuda/: array.h  instance.h  launcher.h  macros.h  memory.h  properties.h
tests/: instance-test.cu  launcher-test.cu  memory-test.cu
